# ACEBench

./: README.md  __init__.py  pyproject.toml
acebench/: __init__.py  eval_main.py  generate.py
acebench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
acebench/model_eval/: __init__.py  evaluation_helper.py  utils.py
acebench/model_inference/: base_inference.py
acebench/model_inference/multi_step/: multi_step_scene.py
acebench/model_inference/multi_step/scenariosen/: __init__.py
acebench/model_inference/multi_turn/: multi_turn_scene.py
model_inference/: __init__.py
model_inference/multi_step/: __init__.py
model_inference/multi_step/scenariosen/phone_platform/: __init__.py
model_inference/multi_step/scenarioszh/: __init__.py
model_inference/multi_step/scenarioszh/phone_platform/: __init__.py
model_inference/multi_turn/: __init__.py
model_inference/multi_turn/scenariosen/: __init__.py
model_inference/multi_turn/scenariosen/phone_platform/: __init__.py
model_inference/multi_turn/scenarioszh/: __init__.py
model_inference/multi_turn/scenarioszh/phone_platform/: __init__.py
