[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acebench"
version = "0.1.0"
description = "Benchmark tasks and tooling for evaluating agentic coding systems."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
  { name = "ACEBench Contributors" },
]
dependencies = [
  "openai",
  "google-generativeai==0.8.3",
  "openpyxl==3.1.5",
  "pandas==2.2.3",
  "protobuf",
  "python-dotenv==1.0.1",
  "tqdm==4.67.1",
  "urllib3==2.3.0",
  "vllm>=0.6.1.post1",
  "wcwidth==0.2.13",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ACEBench",
  "ACEBench.*",
  "model_eval",
  "model_eval.*",
  "model_inference",
  "model_inference.*",
]
